@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.2-5
-Date: 2009-2-20
+Version: 1.2-6
+Date: 2009-2-26
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
